--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1570,3 +1570,22 @@ a {
         transform: translateX(-50%);
     }
 }
+
+/* Product Card Link */
+.product-card-link {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    color: inherit;
+    text-decoration: none;
+}
+
+.product-card-link:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+.product-card-link:hover .product-title {
+    text-decoration: underline;
+}
